bin/testsuite/tests/compiler/src/errors/compiler5018.swg
#global testerror "Err0624"

#test
{
    var q = 0
    let a = @mkany(&q, 0)
}
